--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/js-yaml": "^4.0.5",
+    "@types/uuid": "^8.3.4",
     "@ultimate/vault": "^0.0.2",
     "application-storage": "^1.0.0",
     "express": "^4.18.2",
+    "js-yaml": "^4.1.0",
     "json-storage-fs": "^2.0.2",
     "uuid": "^9.0.0"
   }
